--- a/index.html
+++ b/index.html
@@ -10,22 +10,83 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-          <img src="img/navbar/logo.png" width="110" height="50" class="d-inline-block align-top" alt="">
-        </a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="img/navbar/logo.png" width="110" height="50" class="d-inline-block img-fluid align-top" alt="">
+            </a>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-center">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item"> 
+                        <a class="nav-link active" href="#">Home</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Eco System</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Play to Earn</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Tokenomics</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Roadmap</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Join Us</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Whitepaper</a>
+                    </li>                            
+                </ul>
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="btn btn-primary buttonPlay" href="#">Play now</a>
+                    </li>
+                </ul>
+            </div>        
+        </div>
     </nav>
 
     <section class="jumbotron">
         <div class="container">
             <div class="text-center font-weight-bold d-block">
-                <h1>Hi, we are <span class="textColor">FISHY TANK Team</span><br/>Let's discover with us.</h1>
+                <span class="textColorBack"><h3>We are Back</h3></span>
+            </div>
+            <div class="text-center font-weight-bold d-block">
+                <h1>Hi, we are <span class="textColor">FISHY TANK² Team</span><br/>Let's discover with us.</h1>
             </div>
             <div class="d-block pt-5 text-center">
                 <button class="buttonColor">Know more</button>
             </div>
         </div>
         
+    </section>
+
+    <section class="colorGif">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="font-weight-bold">FISHY TANK ECOSYSTEM</h2>
+            </div>
+            <div class="row">                
+                <div class="d-inline col-6">
+                    <img src="img/gif/fish.gif">
+                </div>
+                <div class="d-inline col-6">
+                    <p>Catching up the NFT trending, We - FISHY TANK Team developed the new completely Play-To-Earn game on NFT and Blockchain technical.
+
+                        Fishy Tank is an NFT ecosystem, where you own beautiful unique Fishes and earn Fishy's Tokens by taking care them.
+                        
+                        We simulate all ocean life activities in this Play-To-Earn game on NFT technology. Every life activity in game is following nature rules and totally under control of Players.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- https://web.archive.org/web/20211227204058/https://fishytank.io/#1 SITE-->
