--- a/index.html
+++ b/index.html
@@ -88,6 +88,66 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <div>
+                <h2>PLAY TO EARN</h2>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div>
+                            <h3>Own your Fishes</h3>
+                            <div>
+                                <p class="mb-4">
+                                    More than 400 billions unique Fishes are delivered based on special characteristics.
+                                </p>
+                            </div>
+                            <div>
+                                <p class="mb-4">
+                                    Each fish is an unique NFT item, so you could not find any duplicate Fish.
+                                </p>
+                            </div>
+                            <div>
+                                <p class="mb-4">
+                                    Let's unpack your fish on Marketplace and become first owners of 5000 Presale Packs!
+                                </p>
+                            </div>
+                            <a class="btn buttonColor">Buy FTE</a>
+                            <a class="">Buy Package</a>
+                        </div>
+
+                    </div>
+                    <div class="col-lg-8 col-sm-12">
+                        <img src="img/cenario/aquario.png" width="512" height="288" alt="aquario">
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </section>
+    <hr/>
+    <div class="row">
+        <div class="col-lg-8 col-sm-12">
+            <img src="img/cenario/feeding.png" width="510" height="253" alt="detalhes do jogo">
+        </div>
+        <div class="col-lg-4 col-sm-12">
+            <h3>Feeding For Winning Rewards</h3>
+            <div>
+                <p>Taking care your fish and get Rewards in return.</p>
+                <p class="mb-4">This is main activity to make your fish grow up quickly and win as many as reward then.</p>
+                <p class="mb-4">Feeding more often, getting more rewards!</p>
+            </div>
+        </div>
+    </div>
+    <hr/>
+    <div class="row">
+        <div class="col-lg-4">
+
+        </div>
+        <div class="col-lg-8">
+            
+        </div>
+    </div>
+
 
     <!-- https://web.archive.org/web/20211227204058/https://fishytank.io/#1 SITE-->
   
