Pagina inicial criada, falta correção no layout

--- a/index.html
+++ b/index.html
@@ -141,12 +141,118 @@
     <hr/>
     <div class="row">
         <div class="col-lg-4">
-
+            <h3>Breeding</h3>
+            <div>
+                <p>The way to earn much more!</p>
+                <p class="mb-4">
+                    Fishy-Tank is an ecosystem, we bring all life activities in ocean to your Tank. Hence, surely, your female fish is also able to deliver baby-fishes like real ones.
+                </p>
+                <p class="mb-4">
+                    Let's Earn more and make your Tank plentiful by BREEDING activity!
+                </p>
+            </div>
         </div>
         <div class="col-lg-8">
-            
+            <img src="img/cenario/breeding.png" width="510" height="253" alt="breeding">
         </div>
     </div>
+    <hr/>
+    <div class="row">
+        <div class="col-lg-8 col-sm-12">
+            <img src="img/cenario/travel.png" width="510" height="253" alt="discovery">
+        </div>
+        <div class="col-lg-4 col-sm-12">
+            <h3>Discovery</h3>
+            <div>
+                <p>You want to make your fishes more powerful? Let take them discover new Oceans.</p>
+                <p class="mb-4">
+                    They will get more experience and jump up higher levels.
+                </p>
+                <p class="mb-4">
+                    And If you are luckier, you will have the chance to get special accessories while discovering the ocean.
+                </p>
+                <p class="mb-4">
+                    Thousands of accessories and challenges are waiting for you, let's DISCOVER together!
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-lg-4 col-sm-12">
+            <h3>Fusion</h3>
+            <div>
+                <p>It must be extreme great if your Fish transform into a Super Fish, mustn't it?</p>
+                <p class="mb-4">
+                    Yes, why not? Fishy Tank provides the Fusion feature that allows you to combine 2 fishes into 1 Super Fish.
+                </p>
+                <p class="mb-4">
+                    The Rarity of Super Fish will be upped 1 level!
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-8 col-sm-12">
+            <img src="img/cenario/upgrade.png" width="614" height="651">
+        </div>
+    </div>
+    <hr/>
+    <div class="row">
+        <div class="col-lg-8 col-sm-12">
+            <img src="img/cenario/marketplace.png" width="614" height="432" alt="Markt Place">
+        </div>
+        <div class="col-lg-4 col-sm-12">
+            <h3>Markt Place</h3>
+            <div>
+                <p>
+                    Fishy Tank is not only a completely ecosystem but a community also.
+                </p>
+                <p class="mb-4">
+                    Take care your fishes, reproduce new unique fishes and sell them in MarketPlace.
+                </p>
+                <p class="mb-4">
+                    You can set price for your Fishes and trade them in an open freedom Market.
+                </p>
+                <p class="mb-4">
+                    Earn more by selling your fishes on MarketPlace!
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr/>
+    <section>
+        <div class="container">
+            <div>
+                <p>Are you interested?</p>
+                <h2>IF YES, JOIN US NOW!</h2>
+                <a class="btn btn-light">JOIN</a>
+            </div>
+            <div>
+                <span>Contact us:</span>
+                <a href="#">contact@fishytank.io</a>
+            </div>
+        </div>
+    </section>
+    <footer class="footer navbar-static-bottom">
+        <div class="row">
+            <div class="col-md-12">
+                <img src="img/cenario/footer.png" width="200" height="91" alt="footer">
+                <p>FishyTank - the beautiful ocean with milions unique fishes. These beautifull Fishes will grown up by your love and caring.</p>
+                <p>Soon they will reproduce many colorful baby fishes and make your ocean more plentiful.</p>
+                <p>Together, you and your beautiful fishes travel new oceans, conquer challenges and win rewards.</p>
+                <p>Become FishyTank player and win togerther.</p>
+            </div>
+            <div class="social-link">
+                <a href="#">Twiter</a>
+                <a href="#">Telegram</a>
+                <a href="#">Discord</a>
+                <a href="#">Instagram</a>
+            </div>
+        </div>
+        <img src="img/cenario/footer01.png" width="200" height="165">
+        <img src="img/cenario/footer02.png" width="200" height="155">
+        <p>© 2021 - Powered by Fishy Tank. Alright reserved.</p>
+    </footer>
+
 
 
     <!-- https://web.archive.org/web/20211227204058/https://fishytank.io/#1 SITE-->
