arrumando imagens e deixando fluido

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="btn btn-primary buttonPlay" href="#">Play now</a>
+                        <a class="btn btn-primary buttonPlay" href="gameapp.html">Play now</a>
                     </li>
                 </ul>
             </div>        
         </div>
     </nav>
-
+    <div class="container">
     <section class="jumbotron">
         <div class="container">
             <div class="text-center font-weight-bold d-block">
@@ -76,7 +76,7 @@
             </div>
             <div class="row">                
                 <div class="d-inline col-6">
-                    <img src="img/gif/fish.gif">
+                    <img src="img/gif/fish.gif" class="img-fluid">
                 </div>
                 <div class="d-inline col-6">
                     <p>Catching up the NFT trending, We - FISHY TANK Team developed the new completely Play-To-Earn game on NFT and Blockchain technical.
@@ -117,7 +117,7 @@
 
                     </div>
                     <div class="col-lg-8 col-sm-12">
-                        <img src="img/cenario/aquario.png" width="512" height="288" alt="aquario">
+                        <img src="img/cenario/aquario.png" class="img-fluid" alt="aquario">
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
     <hr/>
     <div class="row">
         <div class="col-lg-8 col-sm-12">
-            <img src="img/cenario/feeding.png" width="510" height="253" alt="detalhes do jogo">
+            <img src="img/cenario/feeding.png" class="img-fluid" alt="detalhes do jogo">
         </div>
         <div class="col-lg-4 col-sm-12">
             <h3>Feeding For Winning Rewards</h3>
@@ -153,13 +153,13 @@
             </div>
         </div>
         <div class="col-lg-8">
-            <img src="img/cenario/breeding.png" width="510" height="253" alt="breeding">
+            <img src="img/cenario/breeding.png" class="img-fluid" alt="breeding">
         </div>
     </div>
     <hr/>
     <div class="row">
         <div class="col-lg-8 col-sm-12">
-            <img src="img/cenario/travel.png" width="510" height="253" alt="discovery">
+            <img src="img/cenario/travel.png" class="img-fluid imgTratada" alt="discovery">
         </div>
         <div class="col-lg-4 col-sm-12">
             <h3>Discovery</h3>
@@ -192,13 +192,13 @@
             </div>
         </div>
         <div class="col-lg-8 col-sm-12">
-            <img src="img/cenario/upgrade.png" width="614" height="651">
+            <img src="img/cenario/upgrade.png" class="img-fluid">
         </div>
     </div>
     <hr/>
     <div class="row">
         <div class="col-lg-8 col-sm-12">
-            <img src="img/cenario/marketplace.png" width="614" height="432" alt="Markt Place">
+            <img src="img/cenario/marketplace.png" class="img-fluid"  alt="Markt Place">
         </div>
         <div class="col-lg-4 col-sm-12">
             <h3>Markt Place</h3>
@@ -248,10 +248,11 @@
                 <a href="#">Instagram</a>
             </div>
         </div>
-        <img src="img/cenario/footer01.png" width="200" height="165">
-        <img src="img/cenario/footer02.png" width="200" height="155">
+        <img src="img/cenario/footer01.png" class="float-left" width="200" height="165">
+        <img src="img/cenario/footer02.png" class="float-right" width="200" height="155">
         <p>© 2021 - Powered by Fishy Tank. Alright reserved.</p>
     </footer>
+    </div>
 
 
 
