arrumando footer do index

--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
     </div>
     <hr/>
     <section>
-        <div class="container">
+        <div class="container-fluid colorGif text-center">
             <div>
-                <p>Are you interested?</p>
-                <h2>IF YES, JOIN US NOW!</h2>
-                <a class="btn btn-light">JOIN</a>
+                <p class="">Are you interested?</p>
+                <h2 class="text-white">IF YES, JOIN US NOW!</h2>
+                <a class="btn btn-outline-light font-weight-bold">JOIN</a>
             </div>
             <div>
                 <span>Contact us:</span>
@@ -232,27 +232,35 @@
             </div>
         </div>
     </section>
+    </div>
     <footer class="footer navbar-static-bottom">
-        <div class="row">
-            <div class="col-md-12">
-                <img src="img/cenario/footer.png" width="200" height="91" alt="footer">
-                <p>FishyTank - the beautiful ocean with milions unique fishes. These beautifull Fishes will grown up by your love and caring.</p>
-                <p>Soon they will reproduce many colorful baby fishes and make your ocean more plentiful.</p>
-                <p>Together, you and your beautiful fishes travel new oceans, conquer challenges and win rewards.</p>
-                <p>Become FishyTank player and win togerther.</p>
+        <div class="row bg-dark">
+            <div class="col-md-12 mt-5">
+                <img src="img/cenario/footer.png" class="mx-auto d-block" width="200" height="91" alt="footer">
+                <div class="text-center">
+                    <p class="fontBranca mt-4">FishyTank - the beautiful ocean with milions unique fishes. These beautifull Fishes will grown up by your love and caring.</p>
+                    <p class="fontBranca">Soon they will reproduce many colorful baby fishes and make your ocean more plentiful.</p>
+                    <p class="fontBranca">Together, you and your beautiful fishes travel new oceans, conquer challenges and win rewards.</p>
+                    <p class="fontBranca">Become FishyTank player and win togerther.</p>
+                </div>                
             </div>
-            <div class="social-link">
-                <a href="#">Twiter</a>
-                <a href="#">Telegram</a>
-                <a href="#">Discord</a>
-                <a href="#">Instagram</a>
+            <div class="mx-auto">
+                <a href="#"><img src="img/contatos/twitter-100.png" class="midiasSociais"></a>
+                <a href="#"><img src="img/contatos/whatsapp-128.png" class="midiasSociais"></a>
+                <a href="#"><img src="img/contatos/telegram-100.png" class="midiasSociais"></a>
+                <a href="#"><img src="img/contatos/instagram-96.png" class="midiasSociais"></a>
+                <a href="#"><img src="img/contatos/logo-discord-100.png" class="midiasSociais"></a>
             </div>
         </div>
-        <img src="img/cenario/footer01.png" class="float-left" width="200" height="165">
-        <img src="img/cenario/footer02.png" class="float-right" width="200" height="155">
-        <p>© 2021 - Powered by Fishy Tank. Alright reserved.</p>
+        <div class="bg bg-dark">
+            <img src="img/cenario/footer01.png" class="float-left" width="200" height="165">
+            <img src="img/cenario/footer02.png" class="float-right" width="200" height="155">
+            <div class="fixed-bottom">
+                <p class="text-center mx-0">© 2021 - Powered by Fishy Tank. Alright reserved.</p>
+            </div>
+        </div>        
     </footer>
-    </div>
+    
 
 
 
